{
  "sourceLanguage" : "zh-Hant",
  "strings" : {
    "library.add" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Add"
          }
...
